erDiagram
    Alumno{
        int id_alumno pk
        str nombre
        str apellido
        str dni
        str email
        int anio_universitario
        str Carrera
    }
    Materia{
        int sigla pk
        int nivel
        str tipo_Materia
        int ciclo_lectivo
        int id_inscripcion fk

    }
    Curso{
        int id_curso pk
        str nombre
        str nivel
        int numero
    }
    Materia_Curso{
        int id_materia_curso pk
        int id_curso fk
        int sigla fk
    }
    Inscripcion{
        int id_codigo_alfanumerico pk
        int id_alumno fk
        str estado
        str descripcion
    }
    Alumno_Curso{
        int id_alumno_curso pk
        int id_alumno fk
        int id_curso fk
    }
    Evaluacion{
        int id_evaluacion pk
        int nota
        str comentario
        str tipo_evaluacion fk
        date fecha
        str Condicion_Final fk
    }
    Tipo_Evaluacion{
        int id_tipo_evaluacion pk
        str nombre
        str descripcion
    }
    Condicion_Final{
        int id_condicion_final pk
        int id_reporte fk
        str Condicion
        date fecha
        int id_profesor fk
    }

    Profesor{
        int id_profesor pk
        str nombre
        str apellido
    }
    Curso_Profesor{
        int id_curso_profesor pk
        int id_curso fk
        int id_profesor fk
        str email
    }
    Grupo{
        int id PK
        int materia_id fk
        int curso_id fk
        int turno_cursado_id fk
        int ciclo_id fk
        int id_inscripcion fk
        int horario_id fk
    }
    Turno_Cursado{
        int id_turno_cursado pk
        str nombre
        str descripcion
    }
    Horario{
        int id_horario pk
        str nombre
        str descripcion
    }
    Modulo{
        int id_modulo pk
        str nombre
        str descripcion
    }

    Alumno ||--o{ Inscripcion : realiza
    Alumno ||--o{ Condicion_Final : genera
    Inscripcion ||--o{ Grupo : tiene
    Grupo }o --|| Materia : tiene
    Grupo }o --|| Curso : tiene
    Grupo }o --|| Horario : tiene
    Grupo }o --|| Modulo : tiene
    Grupo }o --|| Turno_Cursado : tiene
    Curso ||--o{ Curso_Profesor : imparte
    Curso_Profesor }o--|| Profesor : da
    Condicion_Final }o--|| Profesor : realiza
    Condicion_Final ||--o{ Evaluacion : tiene
    Evaluacion }o--|| Tipo_Evaluacion  : clasifica
    